objects/IdMatrix_Accuity_Result_Record__c.object
<CustomObject>
    <fields>
        <fullName>Accuity_Id__c</fullName>
        <label>Accuity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Details_Id__c</fullName>
        <label>Entity Details Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Details_Version__c</fullName>
        <label>Entity Details Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Id__c</fullName>
        <label>Entity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Source__c</fullName>
        <label>Entity Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Version__c</fullName>
        <label>Entity Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Hit__c</fullName>
        <label>Is Hit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_Date__c</fullName>
        <label>Last Update Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Code__c</fullName>
        <label>List Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Id__c</fullName>
        <label>List Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_On__c</fullName>
        <label>Match On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <label>Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched__c</fullName>
        <label>Matched</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Result_Name__c</fullName>
        <label>Search Result Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Descriptor__c</fullName>
        <label>Stop Descriptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Blocked__c</fullName>
        <label>Total Blocked</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Changed__c</fullName>
        <label>Total Changed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Good__c</fullName>
        <label>Total Good</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Matches__c</fullName>
        <label>Total Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Open__c</fullName>
        <label>Total Open</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_IdMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda IdMatrix</label>
        <referenceTo>Veda_IdMatrix__c</referenceTo>
        <relationshipLabel>IdMatrix Accuity Result Record</relationshipLabel>
        <relationshipName>IdMatrix_Accuity_Result_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IdMatrix Accuity Result Record</label>
    <nameField>
        <label>Accuity Result Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Accuity Result Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>